--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Beginner SCUBA Quiz App</title>
-    <meta name="description" content="Test your beginning scuba knowledge.">
-    <link rel="stylesheet" href="index.css" type="text/css">
-</head>
+    <meta name="description" content="Test your beginning scuba knowledge." />
+    <link rel="stylesheet" href="index.css" type="text/css" />
+  </head>
 
-<body>
+  <body>
+    <div class="bg"></div>
     <header role="banner">
-        <h1>Test your SCUBA knowledge!</h1>
-        <ul>
-            <li>Question <span class="js-question-progress">0</span>/8</li>
-            <li>Score: <span class="js-questions-correct">0</span> correct, <span class="js-questions-incorrect">0</span> incorrect</li>
-        </ul>
+      <h1>Test your SCUBA knowledge!</h1>
+      <ul>
+        <li><br>Question <span class="js-questions-progress">0</span>/8</li>
+        <li>
+          Score:<br><span class="js-questions-correct">0</span> correct<br>
+          <span class="js-questions-incorrect">0</span> incorrect
+        </li>
+      </ul>
     </header>
     <main role="main">
-        <div class="js-page-display"></div>
+      <div class="js-page-display"></div>
     </main>
     <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="index.js"></script>
-</body>
+  </body>
 </html>
